<resources>
    <string name="app_name">xdd</string>
    <string name="about_hotel">About Hotel</string>
    <string name="hotel">Hotel</string>
    <string name="essentials">Essentials</string>
    <string name="what_s_not_included">What\'s not included</string>
    <string name="division">______________________________________________________</string>
    <string name="what_s_included">What\'s included</string>
    <string name="button_more_information">Узнать подробнее</string>
    <string name="Hotel_name">Steigenberger Makadi</string>
    <string name="where_hotel_is">Madinat Makadi, Safaga Road, Makadi Bay, Египет</string>
    <string name="price_hotel">от 134 673 ₽</string>
    <string name="price_hotel2">за тур с перелётом</string>
    <string name="fivestarperfect">5 Превосходно</string>
    <string name="_3rd_line">3rd Line</string>
    <string name="WiFi">paid Wi-Fi in the lobby</string>
    <string name="distanceairport">30km to the airport</string>
    <string name="distancebeach">1km to the beach</string>
    <string name="descriptionhotel">VIP-class hotel with its own golf courses. High level of service. We recommend it for a respectable holiday. The hotel accepts guests over 18 years of age!</string>
    <string name="button_choose_room">К выбору номера</string>
    <string name="descriptionhotel2">Standard with pool and garden view</string>
    <string name="all_included">All included</string>
    <string name="air_conditioner">Air conditioner</string>
    <string name="moreinformation">Подробнее о номере</string>
    <string name="pricehotel2">186 600 $</string>
    <string name="forwhat">For 7 nights with flights</string>
    <string name="choose_a_room">Choose a room</string>
    <string name="reservation">Reservation</string>
    <string name="departure">Departure</string>
    <string name="st_petersburg">Saint Petersburg</string>
    <string name="country_city">Country, city</string>
    <string name="egypt_hurghada">Egypt, Hurghada</string>
    <string name="dates">Dates</string>
    <string name="dates_numbers">19.09.2023 – 27.09.2023</string>
    <string name="number_of_nights">num of nights</string>
    <string name="_7_nights">7 nights</string>
    <string name="room">Room</string>
    <string name="nutrition">Nutrition</string>
    <string name="included_nutrition">Included</string>
    <string name="buyer_information">Buyer information</string>
    <string name="phone_number">Phone number</string>
    <string name="your_email_or_gmail">Your Email or Gmail</string>
    <string name="after_payment">This data is not shared with anyone. After payment we will send a check to the number and email you specified.</string>
    <string name="first_tourist">First tourist</string>
    <string name="name_hint">Name</string>
    <string name="surname_hint">Surname</string>
    <string name="date_of_birth_hint">Date of birth</string>
    <string name="citizenship_hint">Citizenship</string>
    <string name="int_passports_number_hint">Int. passports number</string>
    <string name="second_tourist">Second tourist</string>
    <string name="add_more_tourists">add more tourists</string>
    <string name="tour">Tour</string>
    <string name="fuel_surcharge">Fuel surcharge</string>
    <string name="fuel_surcharge_price">9 300$</string>
    <string name="service_surcharge">Service Surcharge</string>
    <string name="service_surcharge_price">2 036$</string>
    <string name="total">Total</string>
    <string name="total_price">198 036$</string>
    <string name="total_pay_button">Pay 198 036$</string>
    <string name="validity_of_int_passport">Validity of Int. passport</string>
    <string name="confirmation_order">Confirmation of order No. 104893 may take some time (from 1 hour to 24 hours). As soon as we receive a response from the tour operator, you will receive a notification by email.</string>
    <string name="paid_order">The order has been paid!</string>
    <string name="proccesed_order">Your order has been proccesed</string>
    <string name="button_great">Great!</string>
    <string name="emojihappy_des">emojihappy</string>
    <string name="tick_des">tick</string>
    <string name="square_des">square</string>
    <string name="bigger_sign_des">bigger_sign</string>
</resources>