<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_hotel"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="73dp"
        android:layout_height="21dp"
        android:background="#EAE5E5"
        android:gravity="center"
        android:text="@string/_3rd_line"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="157dp"
        android:layout_height="21dp"
        android:background="#EAE5E5"
        android:gravity="center"
        android:text="@string/WiFi"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.401"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />


    <TextView
        android:layout_width="143dp"
        android:layout_height="21dp"
        android:background="#EAE5E5"
        android:gravity="center"
        android:text="@string/distanceairport"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <TextView
        android:layout_width="137dp"
        android:layout_height="21dp"
        android:background="#EAE5E5"
        android:gravity="center"
        android:text="@string/distancebeach"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174" />

    <TextView
        android:layout_width="319dp"
        android:layout_height="88dp"
        android:text="@string/descriptionhotel"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="380dp"
        android:layout_height="190dp"
        android:background="@drawable/border2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.524">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5sp"
            android:background="@drawable/emojihappy" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="75sp"
            android:background="@drawable/tick" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="145sp"
            android:background="@drawable/closesquare" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="5dp"
            android:text="@string/about_hotel"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="25dp"
            android:text="@string/essentials"
            android:textColor="#6C6767"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="45dp"
            android:textColor="@color/black"
            android:layout_marginStart="15sp"
            android:text="@string/division" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="75dp"
            android:text="@string/what_s_included"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="95dp"
            android:text="@string/essentials"
            android:textColor="#6C6767"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="115dp"
            android:text="@string/division"
            android:layout_marginStart="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="145dp"
            android:text="@string/what_s_not_included"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="165dp"
            android:text="@string/essentials"
            android:textColor="#6C6767"
            android:textSize="13sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="310sp"
            android:layout_marginTop="15dp"
            android:background="@drawable/biggersign" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="310dp"
            android:layout_marginTop="85dp"
            android:background="@drawable/biggersign" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="310dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/biggersign" />


    </FrameLayout>

    <Button
        android:layout_width="380sp"
        android:layout_height="50sp"
        android:backgroundTint="@color/black"
        android:onClick="onClickGoMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        android:text="@string/button_choose_room"
        android:textSize="20sp"
        android:gravity="center"
        />

</androidx.constraintlayout.widget.ConstraintLayout>