<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="228dp"
        android:layout_height="31dp"
        android:text="@string/Hotel_name"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="-33sp"
        android:background="@drawable/arrowback"
        android:onClick="onClickGoMain2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="400dp"
        android:layout_height="600dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">


        <ImageView
            android:layout_width="350sp"
            android:layout_height="250sp"
            android:background="@drawable/hoteltwo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.09" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="57dp"
            android:text="@string/descriptionhotel2"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.532" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="20dp"
            android:background="#EAE5E5"
            android:gravity="center"
            android:text="@string/all_included"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.627" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="20dp"
            android:background="#EAE5E5"
            android:gravity="center"
            android:text="@string/air_conditioner"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.539"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.627" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="202dp"
            android:layout_height="35dp"
            android:background="@drawable/border3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.085"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.702">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="6sp"
                android:text="@string/moreinformation"
                android:textColor="#0D72FF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="170dp"
                android:layout_marginTop="8sp"
                android:background="@drawable/biggersign"
                android:backgroundTint="#0D72FF"

                />
        </FrameLayout>

        <TextView
            android:layout_width="187dp"
            android:layout_height="52dp"
            android:text="@string/pricehotel2"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.079"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.813" />

        <TextView
            android:layout_width="155dp"
            android:layout_height="20dp"
            android:text="@string/forwhat"
            android:textColor="#989797"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.832"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.798" />

        <Button
            android:layout_width="350sp"
            android:layout_height="50sp"
            android:backgroundTint="#0D72FF"
            android:gravity="center"
            android:onClick="onClickGoMain"
            android:text="@string/choose_a_room"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintVertical_bias="0.94" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="628dp"
        android:background="@drawable/hotel3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>